@@ -1,4 +1,25 @@
-﻿building_logging_camp = {
+﻿
+building_construction_sector = {
+	building_group = bg_construction
+	texture = "gfx/interface/icons/building_icons/construction_camp.dds"
+	city_type = city
+	levels_per_mesh = 5
+	
+	has_max_level = yes
+	
+	required_construction = construction_cost_very_low
+	unlocking_technologies = {
+		urbanization
+	}
+	production_method_groups = {
+		pmg_base_building_construction_sector
+		pmg_automation_building_3000
+	}
+	
+	ai_value = 2000 # Construction sector should generally be preferred over other equal-priority spending items
+}
+
+building_logging_camp = {
 	building_group = bg_logging
 	texture = "gfx/interface/icons/building_icons/logging_camp.dds"
 	city_type = wood
