@@ -40,6 +40,16 @@ pmg_automation_building_shipyard = {
 	}
 }
 
+pmg_automation_building_3000 = {
+	texture = "gfx/interface/icons/generic_icons/mixed_icon_automation.dds"
+	production_methods = {
+		pm_automation_disabled
+		pm_automation_hydraulic_cranes_3000
+		pm_automation_gantry_cranes_3000
+		pm_automation_modern_cranes_3000
+	}
+}
+
 pmg_ownership_capital_building_universal = {
 	texture = "gfx/interface/icons/generic_icons/mixed_icon_ownership.dds"
 	production_methods = {
