@@ -99,8 +99,8 @@ pm_automatic_machines = {
 	
 	building_modifiers = {
 		workforce_scaled = {
-			goods_input_steel_add = 24			# 1200
-			goods_input_copper_add = 30			# 900
+			goods_input_steel_add = 30			# 1500
+			goods_input_copper_add = 20			# 600
 			goods_input_fabric_add = 5			# 100 # TOTAL 2200
 			
 			goods_output_machine_parts_add = 75	# 3750 # PROFIT 1550
