@@ -134,8 +134,8 @@ pm_early_trains = {
 			goods_output_transportation_add = 20 # 600
 		}
 		level_scaled = {
-			building_employment_laborers_add = 3000
-			building_employment_machinists_add = 1000
+			building_employment_laborers_add = 3750
+			building_employment_machinists_add = 250
 			building_employment_clerks_add = 750
 		}
 	}
@@ -162,8 +162,8 @@ pm_steam_trains = {
 			goods_output_transportation_add = 25 # 750
 		}
 		level_scaled = {
-			building_employment_laborers_add = 2500
-			building_employment_machinists_add = 1500
+			building_employment_laborers_add = 3500
+			building_employment_machinists_add = 500
 			building_employment_clerks_add = 750
 		}
 	}
@@ -190,8 +190,8 @@ pm_electric_trains = {
 			goods_output_transportation_add = 35 # 1050
 		}
 		level_scaled = {
-			building_employment_laborers_add = 2250
-			building_employment_machinists_add = 1750
+			building_employment_laborers_add = 3250
+			building_employment_machinists_add = 750
 			building_employment_clerks_add = 750
 		}
 	}
@@ -218,8 +218,8 @@ pm_diesel_trains = {
 			goods_output_transportation_add = 40 # 1200
 		}
 		level_scaled = {
-			building_employment_laborers_add = 2000
-			building_employment_machinists_add = 2000
+			building_employment_laborers_add = 3000
+			building_employment_machinists_add = 1000
 			building_employment_clerks_add = 750
 		}
 	}
